--- a/wiki-viewer.css
+++ b/wiki-viewer.css
@@ -1,47 +1,77 @@
-body{
-	font-family: monospace;
-}
-
-.container{
-	margin: 0 auto;
-	max-width: 600px;
+.container, .container-fluid{
+	margin-top: 0;
 }
 
 .content{
-	margin-top: 100px;
+	margin: 0 auto;
+	margin-top: 0;
 	text-align: center;
-
+	background-color: #41D3BD;
+	height: 1200px;
+	width: 700px;
+	border-radius: 1.5px;
 }
 
-h1{
 
+h1 {
+	padding-top: 60px;
+	font-size: 48px;
 }
 
 input{
+	margin-top: 60px;
 	font-size: 32px;
-	border-radius: 20px;
+	width: 600px;
+	height: 45px;
 }
 
-button{
-	font-size: 22px;
-	border-radius: 5px;
-	background-color: hotpink;
-
+.btn {
+	margin-top: 20px;
 }
 
-ul {
-
+ul{
+	margin-top: 40px;
 }
 
 li {
+ margin-top: 40px;	
+ margin: 0 auto;
+ width: 500px;
  list-style: none;
- border: 1px black solid;
- border-radius: 5px;
- background-color: pink;
+ border: 1px black;
+ border-radius: 1.5px;
 }
 
-a {
+li a {
 	text-decoration: none;
-	color: purple;
 	font-size: 22px;
+	color: #FFEEE4;
+}
+
+li a:hover {
+	color: grey;
+}
+
+.footer {
+	margin: 0 auto;
+	height: 200px; 
+	width: 100%;
+	background-color: #FFFFF2;
+	width: 700px;
+	border-radius: 1.5px;
+}
+
+
+
+.copyright {
+	margin-top: 50px;
+	text-align: center;
+	font-family: "Courier";
+	font-size: 16px;
+	font-weight: lighter;
+}
+
+.social {
+	margin-top: 50px;
+	text-align: center;
 }
